# Cool17

./: CMakeLists.txt  README.md  status.h
crypto/: CMakeLists.txt  aes128.c  aes128.h  hmac.c  hmac.h  sha256.c  sha256.h
logger/: CMakeLists.txt  README.md  logger.c  logger.h  logger_config.h  logger_config_check.h
logger/hal_logger/: CMakeLists.txt  hal_logger.c  hal_logger.h  hal_logger_desktop.c  hal_logger_desktop.h
